# any-lite

./: .tgitconfig  .travis.yml  BUCK  CHANGES.txt  CMakeLists.txt  README.md  appveyor.yml  conanfile.py
.github/workflows/: ci.yml
example/: 01-basic.cpp  02-property.cpp  03-example.cpp  04-any-variant.cpp  05-no-exceptions.cpp  BUCK  CMakeLists.txt
include/nonstd/: any.hpp
project/CodeBlocks/: any-lite.cbp  any-lite.workspace
script/: create-cov-rpt.py  create-vcpkg.py  update-version.py  upload-conan.py
test/: BUCK  CMakeLists.txt  any-lite.t.cpp  any-lite.t.h  any-main.t.cpp  any-main.t.hpp  any.t.cpp  t.bat  tc-cl.bat  tc.bat  tg.bat
test/nonstd/: any.tweak.hpp
